--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" href="/assets/img/faviconpage.ico">
 	<link rel="stylesheet" href="/css/reset.css">
 	<link rel="stylesheet" href="/css/style.css">
-	<title>CV</title>
+	<title>Alexander Shepelev CV</title>
 </head>
-<body>
-	<h1>Alexandr Shepelev</h1>
+<body class="page">
+	<header class="container header__page">
+
+	</header>
+	<main class="container main__page">
+
+	</main>
+	<footer class="container footer__page">
+
+	</footer>
 </body>
 </html>
