--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;700&display=swap" rel="stylesheet">
-	<link rel="icon" href="/assets/img/faviconpage.ico">
-	<link rel="stylesheet" href="/css/reset.css">
-	<link rel="stylesheet" href="/css/style.css">
+	<link rel="icon" href="./assets/img/faviconpage.ico">
+	<link rel="stylesheet" href="./css/reset.css">
+	<link rel="stylesheet" href="./css/style.css">
 	<title>Alexander Shepelev CV</title>
 </head>
 <body class="page-body">
 	<header class="header page-body__header">
 		<button class="burg">
-			<img src="/assets/img/menu.png" alt="burger" class="burg__img">
+			<img src="./assets/img/menu.png" alt="burger" class="burg__img">
 		</button>
 		<nav class="nav">
 			<ul class="list-items nav__menu">
@@ -31,32 +31,32 @@
 	</header>
 	<aside id="begin" class="sidebar">
 		<h2 class="title main__title title_hide-sidebar">Front-End developer</h2>
-		<img class="sidebar__img" src="/assets/img/avatar.png" alt="avatar">
+		<img class="sidebar__img" src="./assets/img/avatar.png" alt="avatar">
 		<section class="section sidebar__section">
 			<h2 class="title section__title">
 				Contacts
 			</h2>
 			<ul id="contacts" class="list-items section__contacts">
 				<li class="list-items__item list-items__item_display list-items__item_align">
-					<img src="/assets/svg/email-svgrepo-com.svg" alt="email" class="list-items__icon">
+					<img src="./assets/svg/email-svgrepo-com.svg" alt="email" class="list-items__icon">
 					<p class="list-items__contact list-items__contact_email">
 						nazteck@yandex.ru
 					</p>
 				</li>
 				<li class="list-items__item list-items__item_display list-items__item_align">
-					<img src="/assets/svg/telegram-svgrepo-com.svg" alt="telegram" class="list-items__icon">
+					<img src="./assets/svg/telegram-svgrepo-com.svg" alt="telegram" class="list-items__icon">
 					<p class="list-items__contact list-items__contact_telegram">
 						@Nazteck
 					</p>
 				</li>
 				<li class="list-items__item list-items__item_display list-items__item_align">
-					<img src="/assets/svg/discord-fill-svgrepo-com.svg" alt="discord" class="list-items__icon">
+					<img src="./assets/svg/discord-fill-svgrepo-com.svg" alt="discord" class="list-items__icon">
 					<p class="list-items__contact list-items__contact_discord">
 						Nazteck#0810
 					</p>
 				</li>
 				<li class="list-items__item list-items__item_display list-items__item_align">
-					<img src="/assets/svg/vk-svgrepo-com.svg" alt="vkontakte" class="list-items__icon">
+					<img src="./assets/svg/vk-svgrepo-com.svg" alt="vkontakte" class="list-items__icon">
 					<p class="list-items__contact list-items__contact_vk">
 						https://vk.com/xxxxxnonamexxxxx
 					</p>
@@ -130,14 +130,14 @@
 		<section id="language" class="main__section">
 			<h2 class="title main__section-title">Languages</h2>
 			<p class="main__description-lang">Russian: Native</p>
-			<p class="main__description-lang">English: A1 <a href="https://www.efset.org/cert/cuW4WD" target="_blank" class="link main__link"><img src="/assets/svg/efset-logo_black.svg" alt="efset" class="main__icon"></a></p>
+			<p class="main__description-lang">English: A1 <a href="https://www.efset.org/cert/cuW4WD" target="_blank" class="link main__link"><img src="./assets/svg/efset-logo_black.svg" alt="efset" class="main__icon"></a></p>
 		</section>
 	</main>
 	<footer class="footer page-body__footer">
-		<a href="https://github.com/Naztex" target="_blank" class="link"><img src="/assets/svg/github-svgrepo-com.svg" alt="github" class="link__img"></a>
+		<a href="https://github.com/Naztex" target="_blank" class="link"><img src="./assets/svg/github-svgrepo-com.svg" alt="github" class="link__img"></a>
 		<p class="footer__date">2022</p>
-		<a href="https://rs.school/" target="_blank" class="link"><img src="/assets/svg/rs_school_js.svg" alt="rsschool" class="link__img"></a>
+		<a href="https://rs.school/" target="_blank" class="link"><img src="./assets/svg/rs_school_js.svg" alt="rsschool" class="link__img"></a>
 	</footer>
-	<script src="/script.js"></script>
+	<script src="./script.js"></script>
 </body>
 </html>
