feat: add type button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body class="page-body">
 	<header class="header page-body__header">
-		<button class="burg">
+		<button class="burg" type="menu">
 			<img src="./assets/img/menu.png" alt="burger" class="burg__img">
 		</button>
 		<nav class="nav">
